--- a/tasks.json
+++ b/tasks.json
@@ -11,7 +11,7 @@
   {
     "titulo": "Configurar red local IPv4",
     "descripcion": null,
-    "estado": "en progreso",
+    "estado": "en curso",
     "creacion": "2025-10-02T10:30:00",
     "ultimaEdicion": null,
     "vencimiento": null,
